--- a/package.json
+++ b/package.json
@@ -1,12 +1,49 @@
 {
   "name": "socket-chat-example",
-  "version": "0.0.1",
-  "description": "my first socket.io app",
+  "version": "0.1.0",
+  "description": "My first Socket.IO application for real-time chat",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Atharv1705/Online-Chat-application"
+  },
+  "keywords": [
+    "socket.io",
+    "chat",
+    "real-time",
+    "express"
+  ],
+  "author": "Atharv Gunjarge",
+  "license": "MIT",
   "dependencies": {
-    "express": "^4.15.2",
-    "socket.io": "^1.7.3"
+    "bcrypt": "^5.1.1",
+    "connect-flash": "^0.1.1",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1",
+    "express-rate-limit": "^7.4.1",
+    "express-session": "^1.18.1",
+    "express-validator": "^7.2.0",
+    "helmet": "^8.0.0",
+    "mongoose": "^8.7.2",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.15",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
+    "rate-limiter-flexible": "^5.0.4",
+    "sanitize-html": "^2.13.1",
+    "socket.io": "^4.8.0"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "test": "jest --coverage",
+    "lint": "eslint .",
+    "format": "prettier --write ."
+  },
+  "devDependencies": {
+    "eslint": "^8.40.0",
+    "jest": "^29.5.0",
+    "nodemon": "^3.1.7",
+    "prettier": "^3.0.0"
   }
 }
